Fix misaligned clan names

--- a/components/VoiceList/VoiceList.module.css
+++ b/components/VoiceList/VoiceList.module.css
@@ -2,6 +2,8 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
   margin: 0;
 }
 
